--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/foundation.css" />
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-    </head>
-    <body>
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/foundation.css" />
+    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+</head>
+<body>
         <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
         
@@ -25,19 +25,43 @@
         <header>
             <div class="row">
                 <div class="columns text-center">
-                    <img class="right" src="img/ltbcoin-200x200.png" alt="LTBcoin">
+                    <img class="right" src="/img/ltbcoin-200x200.png" alt="LTBcoin">
                     <h1>LTBcoin</h1>
                     <h2>The official token of the LTB Network</h2>
                 </div>
             </div>
         </header>
 
+        <div class="main-body">
+
+            <div class="main-section">
+                <div class="row">
+                    <div class="small-centered medium-10 columns">
+                        <h3>The Philosophy of LTB Coin</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente eos, earum rem necessitatibus. Tempora hic vero magnam rem praesentium dolorum, deserunt beatae porro, natus distinctio, error similique cumque excepturi sequi.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente eos, earum rem necessitatibus. Tempora hic vero magnam rem praesentium dolorum, deserunt beatae porro, natus distinctio, error similique cumque excepturi sequi.</p>
+                    </div>
+                </div>
+            </div>
 
 
 
+            <div class="main-section">
+                <div class="row">
+                    <div class="small-centered medium-10 columns">
+                        <h3>Initial Disbursement</h3>
+                        <div class="graph">
+                            <img src="/img/initial-disbursement.png" alt="Initial Disbursement">
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente eos, earum rem necessitatibus. Tempora hic vero magnam rem praesentium dolorum, deserunt beatae porro, natus distinctio, error similique cumque excepturi sequi.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente eos, earum rem necessitatibus. Tempora hic vero magnam rem praesentium dolorum, deserunt beatae porro, natus distinctio, error similique cumque excepturi sequi.</p>
+                    </div>
+                </div>
+            </div>
 
 
 
+        </div>
 
 
 
@@ -48,12 +72,12 @@
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
+        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+        e.src='//www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+        ga('create','UA-XXXXX-X');ga('send','pageview');
         </script>
     </body>
 </html>
