--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header>
             <div class="row">
                 <div class="columns text-center">
-                    <img class="right" src="/img/ltbcoin-200x200.png" alt="LTBcoin">
+                    <img class="right" src="img/ltbcoin-200x200.png" alt="LTBcoin">
                     <h1>LTBcoin</h1>
                     <h2>The official token of the LTB Network</h2>
                 </div>
@@ -51,7 +51,7 @@
                     <div class="small-centered medium-10 columns">
                         <h3>Initial Disbursement</h3>
                         <div class="graph">
-                            <img src="/img/initial-disbursement.png" alt="Initial Disbursement">
+                            <img src="img/initial-disbursement.png" alt="Initial Disbursement">
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente eos, earum rem necessitatibus. Tempora hic vero magnam rem praesentium dolorum, deserunt beatae porro, natus distinctio, error similique cumque excepturi sequi.</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente eos, earum rem necessitatibus. Tempora hic vero magnam rem praesentium dolorum, deserunt beatae porro, natus distinctio, error similique cumque excepturi sequi.</p>
