fixed scroll targets

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         </div>
 
 
+        <div id="top"></div>
         <header>
-            <div class="row" id="top">
+            <div class="row">
                 <div class="columns text-center">
                     <img class="right" src="img/ltbcoin-200x200.png" alt="LTBcoin">
                     <h1>LTBcoin</h1>
@@ -141,7 +142,7 @@
         <script>
         $('#main-nav').onePageNav({
             currentClass: 'current',
-            changeHash: false,
+            changeHash: true,
             scrollSpeed: 750,
             scrollThreshold: 1,
             filter: '',
