added content from Google doc

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <section class="top-bar-section">
                     <!-- Left Nav Section -->
                     <ul class="left">
-                        <li><a href="#philosophy">Philosophy</a></li>
+                        <li><a href="#about">About</a></li>
                         <li><a href="#disbursement">Disbursement</a></li>
                         <li><a href="#supply">Supply</a></li>
                         <li><a href="#demand">Demand</a></li>
@@ -54,12 +54,22 @@
 
         <div class="main-body">
 
-            <div class="main-section" id="philosophy">
+            <div class="main-section" id="about">
                 <div class="row">
                     <div class="small-centered medium-11 columns">
-                        <h3>The Philosophy of LTBcoin</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente eos, earum rem necessitatibus. Tempora hic vero magnam rem praesentium dolorum, deserunt beatae porro, natus distinctio, error similique cumque excepturi sequi.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente eos, earum rem necessitatibus. Tempora hic vero magnam rem praesentium dolorum, deserunt beatae porro, natus distinctio, error similique cumque excepturi sequi.</p>
+                        <h3>About the Coin</h3>
+
+                        <p>LTBcoin is the proprietary token for the Let’s Talk Bitcoin Network. It is the exclusive token accepted for Sponsorships.  It will provide the user a significant discount in the network wide and ACT-specific ecommerce stores. It can be used in the network for tipping and will generally be useful in every corner of the LTB universe.
+                        </p>
+
+                        <p>Coins are valuable because of the network that uses them. Creating a coin and then bringing in service providers who will accept it gives utility to the coin and therefore value.  Bitcoin had a bit of a chicken and egg problem, needing to widely distribute the coin to be decentralized but not wanting to give it away in an uncontrolled fashion. Computational mining was the solution they arrived on. It limited the people who would get access to the early Bitcoins to those who were biased towards technically savvy early adopters rather than those generally early recipients of “new money.”</p>
+
+                        <p>LTBcoin will not use computational mining.  Instead, coins will be distributed to the content creators, the community and the platform according to a fixed schedule. After a period of 260 weeks (5 years), all coins will be distributed and no new coins will be created.
+                        </p>
+
+                        <p>LTBcoin will be a user-defined asset using the <a href="https://www.counterparty.co/">Counterparty</a> protocol. Counterparty is built on Bitcoin and is secured by the Bitcoin network. Because of this, LTBcoin addresses are exactly the same as Bitcoin addresses. LTBcoin can be traded on the Counterparty distributed exchange for Bitcoin, XCP or other user-defined assets.  If you haven't got a Counterpart wallet yet, visit <a href="https://counterwallet.co">Counterwallet.co</a>.
+                        </p>
+
                     </div>
                 </div>
             </div>
@@ -70,23 +80,45 @@
                 <div class="row">
                     <div class="small-centered medium-11 columns">
                         <h3>Disbursement</h3>
+                        <div class="spacer2"></div>
+
 
                         <div class="row">
                             <div class="medium-6 columns">
                                 <h4>Initial Disbursement</h4>
-                                <img src="img/initial-disbursement.png" alt="Initial Disbursement">                                
+                                <div class="spacer1"></div>
+                                <img src="img/initial-disbursement.png" alt="Initial Disbursement">
+                                <div class="spacer3"></div>
+                                <p>On the launch day, 10% of the money supply, that is 51,000,000 LTBcoin, will be allocated and distributed in the following manner:
+                                    <ul class="disbursement-table">
+                                        <li>40% will be distributed to content creators over the past year based on the published records.</li>
+                                        <li>30% will be distributed to the initial audience.  This 30% will be split as follows:
+                                            <ul class="disbursement-table">
+                                                <li>60% will go to people in the initial LTBcoin community at large</li>
+                                                <li>40% will go to key LTB thinkers and forum participators</li>
+                                            </ul>
+                                        </li>
+                                        <li>15% will be reserved as partner funds for future negotiations.</li>
+                                        <li>10% will go to the current and future platform development.</li>
+                                        <li>5% will go to fund initial vesting pool of CEO, CVO, CTO, CFO level positions.</li>
+                                    </ul>
+                                </p>
+
                             </div>
                             <div class="medium-6 columns">
                                 <h4>Ongoing Disbursements</h4>
+                                <div class="spacer1"></div>
                                 <img src="img/weekly-issuance.png" alt="Ongoing Disbursement">
+                                <div class="spacer3"></div>
+                                <p>LTBcoin will be distributed over a time span of 260 weeks with new tokens created and distributed weekly.  The weekly distribution will be:
+                                    <ul class="disbursement-table">
+                                        <li>65% will be distributed to content creators</li>
+                                        <li>25% will be distributed to the audience.</li>
+                                        <li>10% will go to the platform development and maintenance.</li>
+                                    </ul>
+                                </p>
                             </div>
                         </div>
-                        <div class="spacer3"></div>
-
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente eos, earum rem necessitatibus. Tempora hic vero magnam rem praesentium dolorum, deserunt beatae porro, natus distinctio, error similique cumque excepturi sequi.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente eos, earum rem necessitatibus. Tempora hic vero magnam rem praesentium dolorum, deserunt beatae porro, natus distinctio, error similique cumque excepturi sequi.</p>
-
                     </div>
                 </div>
             </div>
@@ -106,9 +138,10 @@
                         </div>
                         <div class="spacer3"></div>
 
-                            
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente eos, earum rem necessitatibus. Tempora hic vero magnam rem praesentium dolorum, deserunt beatae porro, natus distinctio, error similique cumque excepturi sequi.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente eos, earum rem necessitatibus. Tempora hic vero magnam rem praesentium dolorum, deserunt beatae porro, natus distinctio, error similique cumque excepturi sequi.</p>
+
+                        <p>There will be a total supply of 510,000,000 LTBcoin.</p>
+
+                        <p>Each month new coins will be created according to the published schedule, they will be distributed according to the above disbursement information in a weekly or monthly fashion. At the end of year 5 after the remaining LTBcoins are created, the ability to create more tokens will be locked via the Counterparty Protocol.</p>
                     </div>
                 </div>
             </div>
@@ -119,9 +152,8 @@
                         <h3>Demand</h3>
 
                         <h5>What do I use it for?</h5>
-                            
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente eos, earum rem necessitatibus. Tempora hic vero magnam rem praesentium dolorum, deserunt beatae porro, natus distinctio, error similique cumque excepturi sequi.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente eos, earum rem necessitatibus. Tempora hic vero magnam rem praesentium dolorum, deserunt beatae porro, natus distinctio, error similique cumque excepturi sequi.</p>
+
+                        <p>Demand for LTBcoin is derived from the value it has as the exclusive currency used for purchasing ads on the LTB network. LTBcoin will also be the exclusive token that lets you become a contestant on our gameshows, buy gear in our store, and participate in promotions and other surprises we come up with.</p>
                     </div>
                 </div>
             </div>
@@ -129,6 +161,16 @@
 
 
         </div>
+
+        <footer>
+            <div class="row">
+                <div class="columns">
+                    <ul class="inline-list">
+                        <li><a href="http://letstalkbitcoin.com/">Let's Talk Bitcoin!</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
 
 
 
