added twitter link and fixes for image sizes

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/foundation.css" />
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
@@ -87,7 +88,7 @@
                             <div class="medium-6 columns">
                                 <h4>Initial Disbursement</h4>
                                 <div class="spacer1"></div>
-                                <img src="img/initial-disbursement.png" alt="Initial Disbursement">
+                                <img style="max-height: 217px;" src="img/initial-disbursement.png" alt="Initial Disbursement">
                                 <div class="spacer3"></div>
                                 <p>On the launch day, 10% of the money supply, that is 51,000,000 LTBcoin, will be allocated and distributed in the following manner:
                                     <ul class="disbursement-table">
@@ -108,7 +109,7 @@
                             <div class="medium-6 columns">
                                 <h4>Ongoing Disbursements</h4>
                                 <div class="spacer1"></div>
-                                <img src="img/weekly-issuance.png" alt="Ongoing Disbursement">
+                                <img style="max-height: 217px;" src="img/weekly-issuance.png" alt="Ongoing Disbursement">
                                 <div class="spacer3"></div>
                                 <p>LTBcoin will be distributed over a time span of 260 weeks with new tokens created and distributed weekly.  The weekly distribution will be:
                                     <ul class="disbursement-table">
@@ -130,10 +131,10 @@
                         <h3>Supply</h3>
                         <div class="row">
                             <div class="medium-6 columns">
-                                <img src="img/money-supply-chart.png" alt="Money Supply">
+                                <img style="max-height: 2270px;" src="img/money-supply-chart.png" alt="Money Supply">
                             </div>
                             <div class="medium-6 columns">
-                                <img src="img/weekly-issuance-chart.png" alt="Weekly Issuance">
+                                <img style="max-height: 2270px;" src="img/weekly-issuance-chart.png" alt="Weekly Issuance">
                             </div>
                         </div>
                         <div class="spacer3"></div>
@@ -166,7 +167,8 @@
             <div class="row">
                 <div class="columns">
                     <ul class="inline-list">
-                        <li><a href="http://letstalkbitcoin.com/">Let's Talk Bitcoin!</a></li>
+                        <li><a href="http://letstalkbitcoin.com/"><i class="fa fa-external-link"></i> Let's Talk Bitcoin!</a></li>
+                        <li><a href="https://twitter.com/ltbcoin"><i class="fa fa-twitter"></i> @ltbcoin</a></li>
                     </ul>
                 </div>
             </div>
