--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                         <li><a href="#disbursement">Disbursement</a></li>
                         <li><a href="#supply">Supply</a></li>
                         <li><a href="#demand">Demand</a></li>
+                        <li><a href="#how-to-get">How to Get It</a></li>
+                        <li><a href="#more-info">More Information</a></li>
                     </ul>
                 </section>
             </nav>
@@ -60,16 +62,20 @@
                     <div class="small-centered medium-11 columns">
                         <h3>About the Coin</h3>
 
-                        <p>LTBcoin is the proprietary token for the Let’s Talk Bitcoin Network. It is the exclusive token accepted for Sponsorships.  It will provide the user a significant discount in the network wide and ACT-specific ecommerce stores. It can be used in the network for tipping and will generally be useful in every corner of the LTB universe.
+                        <p>LTBcoin is a brand new kind of thing.  It is a crypto-rewards system where people who help LTB to be useful are rewarded for their efforts.  And it’s built on Bitcoin!</p>
+
+                        <p>LTBcoin is the proprietary token for the Let’s Talk Bitcoin Network. It is the exclusive token accepted for sponsorships.  It will provide the user a significant discount in the network wide and ACT-specific e-commerce stores. It can be used in the network for tipping and will generally be useful in every corner of the LTB universe.
                         </p>
 
-                        <p>Coins are valuable because of the network that uses them. Creating a coin and then bringing in service providers who will accept it gives utility to the coin and therefore value.  Bitcoin had a bit of a chicken and egg problem, needing to widely distribute the coin to be decentralized but not wanting to give it away in an uncontrolled fashion. Computational mining was the solution they arrived on. It limited the people who would get access to the early Bitcoins to those who were biased towards technically savvy early adopters rather than those generally early recipients of “new money.”</p>
-
-                        <p>LTBcoin will not use computational mining.  Instead, coins will be distributed to the content creators, the community and the platform according to a fixed schedule. After a period of 260 weeks (5 years), all coins will be distributed and no new coins will be created.
+                        <p>LTBcoin does not use computational mining.  Instead, coins are distributed to the content creators, the community and the platform according to a fixed schedule. After a period of 260 weeks (5 years), all coins will be distributed and no new coins will be created.
                         </p>
 
-                        <p>LTBcoin will be a user-defined asset using the <a href="https://www.counterparty.co/">Counterparty</a> protocol. Counterparty is built on Bitcoin and is secured by the Bitcoin network. Because of this, LTBcoin addresses are exactly the same as Bitcoin addresses. LTBcoin can be traded on the Counterparty distributed exchange for Bitcoin, XCP or other user-defined assets.  If you haven't got a Counterpart wallet yet, visit <a href="https://counterwallet.co">Counterwallet.co</a>.
+                        <p>LTBcoin is a user-defined asset using the <a href="https://www.counterparty.co/">Counterparty</a> protocol. Counterparty is built on Bitcoin and is secured by the Bitcoin network. Because of this, LTBcoin addresses are exactly the same as Bitcoin addresses. LTBcoin can be traded on the Counterparty distributed exchange for Bitcoin, XCP or other user-defined assets.  If you haven't got a Counterpart wallet yet, visit <a href="https://counterwallet.co">Counterwallet.co</a>.
                         </p>
+
+                        <p>Please see the <a href="http://letstalkbitcoin.com/blog/post/introducing-ltbcoin-our-new-crypto-rewards-program-for-ltb-creators-and-community">this blog post</a> for an introduction of LTBcoin written by Adam B. Levine.</p>
+
+
 
                     </div>
                 </div>
@@ -90,18 +96,18 @@
                                 <div class="spacer1"></div>
                                 <img style="max-height: 217px;" src="img/initial-disbursement.png" alt="Initial Disbursement">
                                 <div class="spacer3"></div>
-                                <p>On the launch day, 10% of the money supply, that is 51,000,000 LTBcoin, will be allocated and distributed in the following manner:
+                                <p>On the launch day, June 27th, 2014, 10% of the money supply (51,000,000 LTBcoin) were allocated and distributed in the following manner:
                                     <ul class="disbursement-table">
-                                        <li>40% will be distributed to content creators over the past year based on the published records.</li>
-                                        <li>30% will be distributed to the initial audience.  This 30% will be split as follows:
+                                        <li>40% were distributed to content creators over the past year based on the published records.</li>
+                                        <li>30% were distributed to the initial audience.  This 30% was split as follows:
                                             <ul class="disbursement-table">
-                                                <li>60% will go to people in the initial LTBcoin community at large</li>
-                                                <li>40% will go to key LTB thinkers and forum participators</li>
+                                                <li>60% went to people in the initial LTBcoin community at large</li>
+                                                <li>40% went to key LTB thinkers and forum participators</li>
                                             </ul>
                                         </li>
-                                        <li>15% will be reserved as partner funds for future negotiations.</li>
-                                        <li>10% will go to the current and future platform development.</li>
-                                        <li>5% will go to fund initial vesting pool of CEO, CVO, CTO, CFO level positions.</li>
+                                        <li>15% were reserved as partner funds for future negotiations.</li>
+                                        <li>10% were allocated for current and future platform development.</li>
+                                        <li>5% were allocated as an initial vesting pool of CEO, CVO, CTO, CFO level positions.</li>
                                     </ul>
                                 </p>
 
@@ -118,6 +124,7 @@
                                         <li>10% will go to the platform development and maintenance.</li>
                                     </ul>
                                 </p>
+                                <p>The first weekly distribution will be on July 5th, 2014.</p>
                             </div>
                         </div>
                     </div>
@@ -140,9 +147,9 @@
                         <div class="spacer3"></div>
 
 
-                        <p>There will be a total supply of 510,000,000 LTBcoin.</p>
+                        <p>There is a total supply of 510,000,000 LTBcoin.</p>
 
-                        <p>Each month new coins will be created according to the published schedule, they will be distributed according to the above disbursement information in a weekly or monthly fashion. At the end of year 5 after the remaining LTBcoins are created, the ability to create more tokens will be locked via the Counterparty Protocol.</p>
+                        <p>Each month new coins are created according to the published schedule, and they will be distributed according to the above disbursement information in a weekly or monthly fashion. At the end of year 5, and after the remaining LTBcoins are created, the ability to create more tokens will be locked via the Counterparty Protocol.</p>
                     </div>
                 </div>
             </div>
@@ -155,6 +162,45 @@
                         <h5>What do I use it for?</h5>
 
                         <p>Demand for LTBcoin is derived from the value it has as the exclusive currency used for purchasing ads on the LTB network. LTBcoin will also be the exclusive token that lets you become a contestant on our gameshows, buy gear in our store, and participate in promotions and other surprises we come up with.</p>
+
+                        <p>Effective July 1st, 2014 <a href="http://letstalkbitcoin.com">LetsTalkBitcoin.com</a>, the Let’s Talk Bitcoin! show, and the LTB network will only sell sponsorship space (on the web properties) or airtime (on the show) for LTBcoin, to the highest bidder, in LTBcoin, at our regular auction events.</p>
+
+
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="main-section" id="how-to-get">
+                <div class="row">
+                    <div class="small-centered medium-11 columns">
+                        <h3>How to Receive LTBcoin</h3>
+
+                        <p>First, visit <a href="https://counterwallet.co">CounterWallet.co</a> and generate a free multi-wallet that holds bitcoins, LTBCoins and anything else built on Bitcoin using the Counterparty protocol.  With one click you'll generate a secure 12 word password, you'll want to keep it safe as it's your private key. Once you've created your password, log into your wallet and you'll see three brand new bitcoin addresses you control.  </p>
+
+                        <p>Copy one of those addresses, then head over to <a href="http://letstalkbitcoin.com">LetsTalkBitcoin.com</a> and login to your account in the upper right hand corner of the page.</p>
+
+                        <p>Inside your account you'll have a few options, one of which is "My Profile" - Click on that, and at the bottom of the page you'll see a place to put your LTBcoin address.  Paste your newly created bitcoin address, save the change and you're done!  When we release LTBcoin later this month you'll be all set.</p>
+
+                        <p>If you have any issues, questions or comments please post to <a href="http://letstalkbitcoin.com/forum/post/get-your-ltbcoin-address-now">this thread</a> on the new forums.</p>
+
+                        <p>The LTB network will not sell LTBcoin.</p>
+
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="main-section" id="more-info">
+                <div class="row">
+                    <div class="small-centered medium-11 columns">
+                        <h3>More Information</h3>
+
+                        <p>If you’d like to look through the past, current and future technical papers and discussions about LTBcoin, you’ll find those <a href="https://drive.google.com/folderview?id=0BwuUOoH79qm7M2U2SnhFd3RFazA&amp;usp=sharing">here</a>.</p>
+
+                        <p>Please also see the <a href="http://letstalkbitcoin.com/blog/post/introducing-ltbcoin-our-new-crypto-rewards-program-for-ltb-creators-and-community">this blog post</a> for an introduction of LTBcoin written by Adam B. Levine.</p>
+
+
                     </div>
                 </div>
             </div>
