more footer links

--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@
                     <ul class="inline-list">
                         <li><a href="http://letstalkbitcoin.com/"><i class="fa fa-external-link"></i> Let's Talk Bitcoin!</a></li>
                         <li><a href="https://twitter.com/ltbcoin"><i class="fa fa-twitter"></i> @ltbcoin</a></li>
+                        <li><a href="https://drive.google.com/folderview?id=0BwuUOoH79qm7M2U2SnhFd3RFazA&amp;usp=sharing"><i class="fa fa-file-text-o"></i> Technical Papers</a></li>
+                        <li><a href="http://letstalkbitcoin.com/blog/post/introducing-ltbcoin-our-new-crypto-rewards-program-for-ltb-creators-and-community"><i class="fa fa-comments-o"></i> Introduction</a></li>
                     </ul>
                 </div>
             </div>
